--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skolavareni-fcmg-cz",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -11,7 +11,8 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "search": "docker run -it --env-file=.algolia.env -e \"CONFIG=$(cat algolia-search.json | jq -r tostring)\" algolia/docsearch-scraper"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.72",
