Search index refresh workflow

--- a/.github/workflows/search-refresh.yml
+++ b/.github/workflows/search-refresh.yml
@@ -5,7 +5,7 @@ on: [deployment_status]
 jobs:
   search-refresh:
     # only runs this job on successful deploy of master
-    # if: github.event.deployment_status.state == 'success' && github.event.deployment_status.ref == 'master'
+    if: github.event.deployment_status.state == 'success' && github.event.deployment_status.environment == 'Production'
     runs-on: ubuntu-latest
     steps:
       - name: Dump Deployment status
@@ -13,15 +13,15 @@ jobs:
           DEPLOYMENT_STATUS: ${{ toJSON(github.event.deployment_status) }}
         run: echo "$DEPLOYMENT_STATUS"
 
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # - name: Scrape the site
-      #   env:
-      #     APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
-      #     API_KEY: ${{ secrets.API_KEY }}
-      #   run: |
-      #     docker run \
-      #     -e APPLICATION_ID -e API_KEY \
-      #     -e CONFIG="$(cat algolia-search.json | jq -r tostring)" \
-      #     algolia/docsearch-scraper
+      - name: Scrape the site
+        env:
+          APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
+          API_KEY: ${{ secrets.API_KEY }}
+        run: |
+          docker run \
+          -e APPLICATION_ID -e API_KEY \
+          -e CONFIG="$(cat algolia-search.json | jq -r tostring)" \
+          algolia/docsearch-scraper
