Setup build cache on CI

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -25,6 +25,16 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
 
+      - name: Cache build
+        id: cache-build
+        uses: actions/cache@v3
+        with:
+          path: |
+            .docusaurus
+            build
+            node_modules/.cache/webpack
+          key: build-${{ hashFiles('blog/**') }}
+
       - name: Install Yarn dependencies
         run: yarn install --frozen-lockfile
 
